--- a/frontend/src/pages/AdminDashboard.css
+++ b/frontend/src/pages/AdminDashboard.css
@@ -596,6 +596,7 @@
   outline: none;
   background-color: #fafafa;
   transition: all 0.3s ease;
+  color: #374151;
 }
 
 .modal-input.error,
@@ -608,6 +609,7 @@
   resize: vertical;
   min-height: 80px;
   font-family: inherit;
+  color: black;
 }
 
 .modal-select {
